# xontrib-homebrew

./: .copier-answers.yml  .editorconfig  .gitignore  License  Manifest.in  ReadMe.md  pyproject.toml  setup.py
.github/: issue_template.md
.github/workflows/: push-test.yml  python-publish.yml  test.yml
tests/: test_xontrib.py
xontrib/: homebrew.py  homebrew.xsh
xontrib/homebrew/: __init__.py  homebrew.py
xontrib_homebrew/: homebrew.py  main.py
